--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.13",
+    "@heroicons/vue": "^2.0.17",
+    "tailwindcss": "^3.3.1",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
