--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@heroicons/vue": "^2.0.17",
     "@vueuse/sound": "^2.0.1",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue-sweetalert2": "^5.0.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
